set(COMMON_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB_RECURSE COMMON_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB_RECURSE COMMON_HEADERS ${COMMON_INCLUDE}/*.h)

add_library(Common STATIC ${COMMON_SOURCE} ${COMMON_HEADERS})
target_include_directories(Common PUBLIC ${COMMON_INCLUDE})

